Singleton Container improved and Request logic imporved